--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@loadable/component": "^5.15.3",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.11.6",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.0"
     },
     "devDependencies": {
+        "@types/loadable__component": "^5.13.4",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
