--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
         "no-console": 0,
         "import/no-unresolved": 0,
         "import/extensions": 0,
+        "default-param-last": 0,
         "react/jsx-filename-extension": [
             1,
             {
