--- a/package.json
+++ b/package.json
@@ -14,14 +14,20 @@
         "@loadable/component": "^5.15.3",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.6",
+        "@reduxjs/toolkit": "^1.9.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.0"
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.8.0",
+        "redux": "^4.2.1",
+        "redux-logger": "^3.0.6",
+        "redux-thunk": "^2.4.2"
     },
     "devDependencies": {
         "@types/loadable__component": "^5.13.4",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
+        "@types/redux-logger": "^3.0.9",
         "@typescript-eslint/eslint-plugin": "^5.49.0",
         "@typescript-eslint/parser": "^5.49.0",
         "@vitejs/plugin-react": "^3.0.0",
