--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.6",
         "@reduxjs/toolkit": "^1.9.2",
+        "axios": "^1.3.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.8.0",
+        "react-toastify": "^9.1.1",
         "redux": "^4.2.1",
         "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.2"
