--- a/client/package.json
+++ b/client/package.json
@@ -9,40 +9,33 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "@loadable/component": "^5.15.3",
-        "@mui/icons-material": "^5.11.0",
-        "@mui/material": "^5.11.6",
-        "@reduxjs/toolkit": "^1.9.2",
-        "axios": "^1.3.2",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@mui/icons-material": "^5.11.11",
+        "@mui/material": "^5.11.13",
+        "@reduxjs/toolkit": "^1.9.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
-        "react-router-dom": "^6.8.0",
-        "react-toastify": "^9.1.1",
-        "redux": "^4.2.1",
-        "redux-logger": "^3.0.6",
-        "redux-thunk": "^2.4.2"
+        "react-router-dom": "^6.9.0",
+        "react-toastify": "^9.1.1"
     },
     "devDependencies": {
-        "@types/loadable__component": "^5.13.4",
-        "@types/react": "^18.0.26",
-        "@types/react-dom": "^18.0.9",
-        "@types/redux-logger": "^3.0.9",
-        "@typescript-eslint/eslint-plugin": "^5.49.0",
-        "@typescript-eslint/parser": "^5.49.0",
-        "@vitejs/plugin-react": "^3.0.0",
+        "@types/react": "^18.0.28",
+        "@types/react-dom": "^18.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.55.0",
+        "@typescript-eslint/parser": "^5.55.0",
+        "@vitejs/plugin-react": "^3.1.0",
         "eslint": "8.2.0",
         "eslint-config-airbnb": "19.0.4",
-        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-prettier": "^8.7.0",
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsx-a11y": "6.5.1",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
-        "prettier": "^2.8.3",
+        "prettier": "^2.8.4",
         "typescript": "^4.9.3",
-        "vite": "^4.0.0"
+        "vite": "^4.2.0"
     }
 }
