--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "author": "Pallab",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.1.0",
         "concurrently": "^7.6.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
@@ -22,6 +23,7 @@
         "typescript": "^4.9.5"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.17",
         "@types/node": "^18.11.19",
         "@typescript-eslint/eslint-plugin": "^5.50.0",
