--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
         cache: 'yarn'
     - run: |
         cd client
-        yarn
+        yarn install --frozen-lockfile
     - run: |
         cd client
         yarn build 
