--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,7 +18,11 @@ jobs:
       matrix:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    
+    defaults:
+      run:
+        working-directory: client
+        
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -26,12 +30,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: |
-        cd client
-        yarn install --frozen-lockfile
-    - run: |
-        cd client
-        yarn build 
-    - run: |
-        cd client
-        yarn test
+    - run: yarn install 
+    - run: yarn build 
+    - run: yarn test
