--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: client
+        working-directory: ./client
         
     steps:
     - uses: actions/checkout@v3
