--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "jest"
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -34,6 +35,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
+        "jest": "^29.5.0",
         "prettier": "^2.8.4",
         "typescript": "^4.9.3",
         "vite": "^4.2.0"
