--- a/client/package.json
+++ b/client/package.json
@@ -1,43 +1,59 @@
 {
-    "name": "blog",
+    "name": "client",
+    "version": "0.1.1",
     "private": true,
-    "version": "0.0.0",
-    "type": "module",
+    "author": "Pallab",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "preview": "vite preview",
-        "test": "jest"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@mui/icons-material": "^5.11.11",
-        "@mui/material": "^5.11.13",
+        "@mui/material": "^5.11.15",
         "@reduxjs/toolkit": "^1.9.3",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
-        "react-router-dom": "^6.9.0",
-        "react-toastify": "^9.1.1"
+        "react-router-dom": "^6.10.0",
+        "react-scripts": "5.0.1",
+        "react-toastify": "^9.1.2",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0"
     },
     "devDependencies": {
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.55.0",
-        "@typescript-eslint/parser": "^5.55.0",
-        "@vitejs/plugin-react": "^3.1.0",
+        "@typescript-eslint/eslint-plugin": "^5.57.0",
+        "@typescript-eslint/parser": "^5.57.0",
         "eslint": "8.2.0",
         "eslint-config-airbnb": "19.0.4",
-        "eslint-config-prettier": "^8.7.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "2.25.3",
         "eslint-plugin-jsx-a11y": "6.5.1",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "7.28.0",
         "eslint-plugin-react-hooks": "4.3.0",
-        "jest": "^29.5.0",
-        "prettier": "^2.8.4",
-        "typescript": "^4.9.3",
-        "vite": "^4.2.0"
+        "prettier": "^2.8.7"
     }
 }
