--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "bcrypt": "^5.1.0",
         "concurrently": "^7.6.0",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "mongoose": "^6.9.0",
@@ -24,6 +25,7 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/node": "^18.11.19",
         "@typescript-eslint/eslint-plugin": "^5.50.0",
