--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "start": "node dist/index.js",
+        "start": "node --experimental-modules dist/index.js",
         "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\"",
         "build": "rimraf dist && npx tsc"
     },
