--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -3,5 +3,13 @@
         "source.fixAll.eslint": true,
         "source.fixAll.tslint": true,
         "source.organizeImports": true
+    },
+    "[typescript]": {
+        "editor.formatOnSave": false,
+        "editor.defaultFormatter": null
+    },
+    "[typescriptreact]": {
+        "editor.formatOnSave": false,
+        "editor.defaultFormatter": null
     }
 }
