--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
-    "type": "module",
     "scripts": {
-        "start": "node --experimental-modules dist/index.js",
+        "start": "node dist/index.js",
         "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\"",
         "build": "rimraf dist && npx tsc"
     },
