--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,7 +14,16 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "baseUrl": "./src",
+        "paths": {
+            "components/*": ["components/*"],
+            "layout/*": ["layout/*"],
+            "pages/*": ["pages/*"],
+            "redux/*": ["redux/*"],
+            "routes/*": ["routes/*"],
+            "types/*": ["types/*"]
+        }
     },
-    "include": ["src"]
+    "include": ["src/**/*"]
 }
