--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true,
         "source.fixAll.tslint": true,
@@ -8,8 +9,5 @@
         "editor.formatOnSave": false,
         "editor.defaultFormatter": null
     },
-    "[typescriptreact]": {
-        "editor.formatOnSave": false,
-        "editor.defaultFormatter": null
-    }
+    
 }
