--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,28 @@
 {
     "name": "blog",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "main": "index.js",
     "scripts": {
         "start": "node dist/index.js",
-        "dev": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\"",
-        "build": "rimraf dist && npx tsc"
+        "dev": "ts-node-dev -r tsconfig-paths/register --files src/index.ts",
+        "build": "rimraf dist && npx tsc && npx tsc-alias",
+        "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+        "lint:fix": "eslint . --fix"
     },
     "keywords": [],
     "author": "Pallab",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.0",
-        "concurrently": "^7.6.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
-        "mongoose": "^6.9.0",
-        "nodemon": "^2.0.20",
+        "http-status": "^1.6.2",
+        "mongoose": "^7.3.2",
         "rimraf": "^4.1.2",
-        "typescript": "^4.9.5"
+        "winston": "^3.9.0",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -34,6 +36,9 @@
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-import": "2.25.2",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.8.3"
+        "prettier": "^2.8.3",
+        "ts-node-dev": "^2.0.0",
+        "tsc-alias": "^1.8.7",
+        "typescript": "^5.1.6"
     }
 }
