--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,26 @@
 {
     "compilerOptions": {
-        "target": "ES5",
-        "module": "CommonJS",
-        "moduleResolution": "node",
+        "target": "ES2020",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
         "outDir": "dist",
         "rootDir": "src",
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "baseUrl": "./src",
+        "paths": {
+            "configs/*": ["configs/*"],
+            "constants/*": ["constants/*"],
+            "controllers/*": ["controllers/*"],
+            "errors/*": ["errors/*"],
+            "middlewares/*": ["middlewares/*"],
+            "models/*": ["models/*"],
+            "routes/*": ["routes/*"],
+            "services/*": ["services/*"],
+            "types/*": ["types/*"],
+            "utils/*": ["utils/*"]
+        }
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
