--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
         "mongoose": "^7.3.2",
         "rimraf": "^4.1.2",
         "winston": "^3.9.0",
-        "winston-daily-rotate-file": "^4.7.1"
+        "winston-daily-rotate-file": "^4.7.1",
+        "zod": "^3.21.4"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
