--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^9.0.0",
         "mongoose": "^7.2.1",
         "rimraf": "^5.0.1",
+        "slugify": "^1.6.6",
         "winston": "^3.9.0",
         "winston-daily-rotate-file": "^4.7.1",
         "zod": "^3.21.4"
