--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
         branches: ["main"]
 
 jobs:
-    build:
+    build-client:
         runs-on: ubuntu-latest
 
         defaults:
@@ -20,7 +20,6 @@ jobs:
         strategy:
             matrix:
                 node-version: [18.x]
-                # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
         steps:
             - uses: actions/checkout@v3
@@ -30,6 +29,29 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: "yarn"
                   cache-dependency-path: "./client/yarn.lock"
+            - run: yarn install
+            - run: yarn build
+            - run: yarn test
+
+    build-server:
+        runs-on: ubuntu-latest
+
+        defaults:
+            run:
+                working-directory: ./server
+
+        strategy:
+            matrix:
+                node-version: [18.x]
+
+        steps:
+            - uses: actions/checkout@v3
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: "yarn"
+                  cache-dependency-path: "./server/yarn.lock"
             - run: yarn install
             - run: yarn build
             - run: yarn test
